--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.19",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "~1.7.0",
+    "babel-preset-env": "~1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "eslint": "~4.15.0",
     "eslint-plugin-vue": "^4.5.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "~1.1.5",
     "git-repo-info": "^1.4.1",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-ajax": "^3.4.0",
+    "jasmine-ajax": "^3.3.1",
     "jasmine-core": "^2.8.0",
     "jquery": "~3.3.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
+    "karma-jasmine": "^1.1.0",
     "karma-junit-reporter": "^1.2.0",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.5",
@@ -50,7 +50,8 @@
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^2.13.1"
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -58,7 +59,7 @@
     "lodash": "^4.17.10",
     "qs": "^6.5.2",
     "striptags": "^2.2.1",
-    "uuid": "^3.3.2",
+    "uuid": "^3.1.0",
     "vue": "^2.5.16"
   },
   "browserslist": [
