Webpack Build Mode
Add the `--mode` flag to the webpack command, as expected by
Webpack 4 and add a development build mode to ease debugging and
exploration using Vue devtools.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "analyze": "webpack --optimize-minimize; webpack --profile --json > bundle-stats.json; webpack-bundle-analyzer bundle-stats.json dist",
     "clean": "rm -rf dist junit bundle-stats.json",
     "prebuild": "npm install",
-    "build": "webpack --optimize-minimize",
+    "build": "webpack --mode=production",
+    "build-dev": "webpack --mode=development",
     "test": "karma start karma.conf.js --single-run",
     "test-jenkins": "karma start karma.conf.js --single-run --reporters junit --browsers Chrome_Headless",
     "test-single-run": "karma start karma.conf.js --single-run",
