--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "karma start karma.conf.js --single-run",
     "test-jenkins": "karma start karma.conf.js --single-run --reporters junit --browsers Chrome_Headless",
     "test-single-run": "karma start karma.conf.js --single-run",
-    "start": "WATCHING=1 webpack --progress --colors --watch"
+    "start": "WATCHING=1 webpack --mode=development --progress --colors --watch"
   },
   "author": "BMIP - OCTRI",
   "license": "MIT",
