REDDEV-383 updated for 8.7.1
Support only Bootstrap 4 going forward.

Added compatibility in config.json. The version will likely be above 8.7.1 once the REDCap.php patch is accepted and released.

--- a/config.json
+++ b/config.json
@@ -9,6 +9,10 @@
       "institution": "OHSU"
     }
   ],
+  "compatibility": {
+      "redcap-version-min": "8.7.1",
+      "redcap-version-max": ""
+  },
   "permissions": [
     "select_data"
   ],
