--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "analyze": "webpack --optimize-minimize; webpack --profile --json > bundle-stats.json; webpack-bundle-analyzer bundle-stats.json dist",
     "clean": "rm -rf dist junit bundle-stats.json",
+    "lint:js": "eslint ./*.js js/**/*.{js,vue} js-tests",
     "prebuild": "npm install",
     "build": "webpack --mode=production",
     "build-dev": "webpack --mode=development",
@@ -31,7 +32,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "eslint": "~4.15.0",
-    "eslint-plugin-vue": "^4.5.0",
+    "eslint-plugin-vue": "^4.7.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "~1.1.5",
     "git-repo-info": "^1.4.1",
