--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "~1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
     "eslint": "~4.15.0",
     "eslint-plugin-vue": "^4.7.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "~1.1.5",
+    "file-loader": "~2.0.0",
     "git-repo-info": "^1.4.1",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-ajax": "^3.4.0",
@@ -46,14 +45,15 @@
     "karma-jasmine": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.5",
+    "karma-webpack": "^4.0.0-rc.3",
+    "mini-css-extract-plugin": "^0.4.5",
     "moment": "^2.22.2",
-    "style-loader": "^0.21.0",
-    "vue-loader": "^15.2.4",
+    "style-loader": "^0.23.0",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.26.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
