--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-vue": "^4.7.1",
     "file-loader": "~2.0.0",
     "git-repo-info": "^1.4.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.4",
     "jasmine-ajax": "^3.4.0",
     "jasmine-core": "^2.8.0",
     "jquery": "~3.3.1",
