--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "url": "https://octriinternal.ohsu.edu/stash/scm/reddev/consort-report.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "@vue/test-utils": "^1.0.0-beta.26",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "eslint": "~4.15.0",
@@ -56,8 +55,9 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.10",
     "qs": "^6.5.2",
     "uuid": "^3.3.2",
