--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "html-webpack-plugin": "^4.0.0-beta.4",
     "jasmine-ajax": "^3.4.0",
     "jasmine-core": "^2.8.0",
-    "jquery": "~3.3.1",
-    "karma": "^3.0.0",
+    "jquery": "^3.4.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.2",
@@ -51,7 +51,7 @@
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.26.0",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
