--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "url": "https://octriinternal.ohsu.edu/stash/scm/reddev/report-counts.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
     "@vue/test-utils": "^1.0.0-beta.26",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^1.0.1",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "eslint": "~5.16.0",
     "eslint-plugin-vue": "^4.7.1",
-    "file-loader": "~2.0.0",
+    "file-loader": "^5.1.0",
     "git-repo-info": "^1.4.1",
-    "html-webpack-plugin": "^4.0.0-beta.4",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "jasmine-ajax": "^3.4.0",
     "jasmine-core": "^2.8.0",
     "jquery": "^3.4.1",
@@ -45,18 +45,18 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^4.0.0-rc.3",
-    "mini-css-extract-plugin": "^0.4.5",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.22.2",
-    "style-loader": "^0.23.0",
+    "style-loader": "^1.1.3",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/runtime": "^7.8.7",
     "axios": "^0.19.0",
     "lodash": "^4.17.13",
     "qs": "^6.5.2",
