--- a/package.json
+++ b/package.json
@@ -26,25 +26,25 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@vue/test-utils": "^1.0.0-beta.26",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "eslint": "~5.16.0",
-    "eslint-plugin-vue": "^4.7.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^5.1.0",
     "git-repo-info": "^1.4.1",
     "html-webpack-plugin": "^4.0.0-beta.11",
-    "jasmine-ajax": "^3.4.0",
-    "jasmine-core": "^2.8.0",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^3.5.0",
     "jquery": "^3.4.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^4.0.0-rc.3",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^3.1.1",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.22.2",
     "style-loader": "^1.1.3",
