--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "webpack --mode=production",
     "build-dev": "webpack --mode=development",
     "test": "karma start karma.conf.js --single-run",
+    "test-ci": "karma start karma.conf.js --single-run --browsers Chrome_Headless",
     "test-jenkins": "karma start karma.conf.js --single-run --reporters junit --browsers Chrome_Headless",
     "test-single-run": "karma start karma.conf.js --single-run",
     "start": "WATCHING=1 webpack --mode=development --progress --colors --watch"
