--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.0'
     - run: npm install
     - run: npm run test-ci
+    - run: composer install
+    - run: composer run-script test
