--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,7 @@ jobs:
         node-version: 12.x
     - name: Install dependencies
       run: npm install
+    - name: Run Webpack build
+      run: npm run build
     - name: Run tests
       run: npm run test-ci
