--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plugin for generating report counts.",
   "main": "./dist/bundle.js",
   "scripts": {
-    "analyze": "webpack --optimize-minimize; webpack --profile --json > bundle-stats.json; webpack-bundle-analyzer bundle-stats.json dist",
+    "analyze": "webpack --analyze",
     "clean": "rm -rf dist junit bundle-stats.json",
     "lint:js": "eslint --ext .js --ext .vue ./*.js js js-tests",
     "prebuild": "npm install",
